--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body{
     content: "";
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     z-index: 2;
     top: 0;
     left: 0;
