--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,22 @@ body{
     opacity: .5;
 }
 
+.menu--bar{
+    position: absolute;
+    top: 5%;
+    right: 2%;
+    border: 2px solid white;
+    z-index: 6;
+    padding: 1rem;
+    cursor: pointer;
+    display: none;
+}
+
+.menu--bar i{
+    color: white;
+    font-size: 30px;
+}
+
 .margin--outside{
     max-width: 1024px;
     margin: 0 auto;
@@ -200,6 +216,24 @@ body{
 
 .menu--items:hover .menu--item,
 .social--items:hover .social--item{color: #CBFF00;}
+
+.menu--mobile{
+    position: absolute;
+    z-index: 6;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, .5);
+    display: none;
+}
+
+.menu--mobile .menu{
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: inherit;
+}
 
 .section--container:nth-child(1){
     background-image: url(../img/img-2.jpg);
