--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,14 @@ body{
     opacity: .5;
 }
 
+.menu--bar{
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    border: 2px solid white;
+    z-index: 6;
+}
+
 .margin--outside{
     max-width: 1024px;
     margin: 0 auto;
