estilos bar--menu

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,22 @@ body{
     opacity: .5;
 }
 
+.menu--bar{
+    position: absolute;
+    top: 5%;
+    right: 2%;
+    border: 2px solid white;
+    z-index: 6;
+    padding: 1rem;
+    cursor: pointer;
+    display: none;
+}
+
+.menu--bar i{
+    color: white;
+    font-size: 30px;
+}
+
 .margin--outside{
     max-width: 1024px;
     margin: 0 auto;
