--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,45 @@ body{
     src: url("../fonts/LemonMilk.otf");
 }
 
+@font-face {
+    font-family: 'icomoon';
+    src:  url('../fonts/icomoon.eot?rgjlx1');
+    src:  url('../fonts/icomoon.eot?rgjlx1#iefix') format('embedded-opentype'),
+      url('../fonts/icomoon.ttf?rgjlx1') format('truetype'),
+      url('../fonts/icomoon.woff?rgjlx1') format('woff'),
+      url('../fonts/icomoon.svg?rgjlx1#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1; 
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-github-square:before {
+    content: "\e900";
+}
+.icon-facebook-square:before {
+    content: "\e901";
+}
+.icon-twitter-square:before {
+    content: "\e902";
+}
+.icon-cog:before {
+    content: "\e994";
+}
+.icon-menu:before {
+    content: "\e9bd";
+}
+
 ::-webkit-scrollbar{width: 8px;}
 ::-webkit-scrollbar-track{background-color: #2A3949;}
 
