--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,14 +1,15 @@
-@media screen and (max-width: 767px){
+@media screen and (max-width: 768px){
     .title{font-size: 60px;}
     .menu--title .menu{display: none;}
-    .section{flex-direction: column;}
+    .wrapper{flex-direction: column;}
     .section--container:nth-child(1),.section--container:nth-child(2){width: 100%;}
     .section--container:nth-child(1){height: 45%; background-position: top center;}
     .about--image{float: none; display: none;}
-    .about{margin-left: 10px; margin-right: 10px;}
+    .about--me{margin-left: 10px; margin-right: 10px;}
     .services,
     .portfolios,
     .contacts{overflow: auto;}
+    .contact{flex-direction: column;}
     .service{width: 100%; margin: 2%;}
     .portfolio{width: 48%;}
     .contacts--container{flex-direction: column;}
@@ -16,12 +17,12 @@
     .menu--bar{display: block;}
 }
 
-@media screen and (max-width: 479px){
+@media screen and (max-width: 480px){
     .title{font-size: 40px;}
     .portfolio{width: 100%;}
 }
 
-@media screen and (max-width: 319px){
+@media screen and (max-width: 320px){
     .title{font-size: 35px;}
     .col{width: 100%;}
 }
