--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,11 @@ li{list-style: none;}
 
 @font-face {
     font-family: 'icomoon';
-    src:  url('../fonts/icomoon.eot?rgjlx1');
-    src:  url('../fonts/icomoon.eot?rgjlx1#iefix') format('embedded-opentype'),
-      url('../fonts/icomoon.ttf?rgjlx1') format('truetype'),
-      url('../fonts/icomoon.woff?rgjlx1') format('woff'),
-      url('../fonts/icomoon.svg?rgjlx1#icomoon') format('svg');
+    src:  url('../fonts/icomoon.eot?wk9cu');
+    src:  url('fonts/icomoon.eot?wk9cu#iefix') format('embedded-opentype'),
+      url('../fonts/icomoon.ttf?wk9cu') format('truetype'),
+      url('../fonts/icomoon.woff?wk9cu') format('woff'),
+      url('../fonts/icomoon.svg?wk9cu#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -45,31 +45,25 @@ li{list-style: none;}
     -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-github-square:before {
-    content: "\e900";
-}
-.icon-facebook-square:before {
-    content: "\e901";
-}
-.icon-twitter-square:before {
-    content: "\e902";
-}
-.icon-cog:before {
-    content: "\e994";
-}
-.icon-menu:before {
-    content: "\e9bd";
-}
+.icon-map-marker:before{content: "\f041";}
+.icon-twitter-square:before{content: "\f081";}
+.icon-facebook-square:before{content: "\f082";}
+.icon-linkedin-square:before{content: "\f08c";}
+.icon-github-square:before{content: "\f092";}
+.icon-phone-square:before{content: "\f098";}
+.icon-envelope:before{content: "\f0e0";}
+.icon-window:before{content: "\e900";}
+.icon-react:before {content: "\e901";}
+.icon-code:before {content: "\e902";}
 
 ::-webkit-scrollbar{width: 8px;}
 ::-webkit-scrollbar-track{background-color: #2A3949;}
+::placeholder{color: #6e6e6e;}
 
 ::-webkit-scrollbar-thumb{
     background-color: #182028;
     border-radius: 20px;
 }
-
-::placeholder{color: #6e6e6e;}
 
 @keyframes animateDown{
     from{transform: translate(-50%,-50%);}
@@ -147,7 +141,10 @@ li{list-style: none;}
     padding: 5rem;
 }
 
-.services,.contacts,.footer{background-color: #151515;}
+.services,
+.contacts,
+.footer{background-color: #151515;}
+
 .portfolios{background-color: #ebebeb}
 
 .header{
@@ -418,7 +415,7 @@ p.about--info{color: #888888;}
 }
 
 .service{
-    width: 23%;
+    width: 31.3333333333%;
     padding: 0px;
     text-align: center;
 }
@@ -490,7 +487,10 @@ p.about--info{color: #888888;}
 .contact--container{
     color: #FFFFFF;
     font-size: 40px;
-    padding-right: 1rem;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    margin-right: 1rem;
 }
 
 .contact--description{color: white;}
@@ -528,11 +528,13 @@ textarea{resize: none;}
 }
 
 .submit:hover{cursor: pointer;}
+
 .footer{
     text-align: center;
     color: #6e6e6e;
     padding: 1rem;
     font-size: 20px;
 }
+
 .active{display: block;}
 .active--bar{display: block;}
