--- a/css/style.css
+++ b/css/style.css
@@ -136,12 +136,13 @@ body{
     justify-content: center;
     align-items: center;
     z-index: 9;
+    visibility: hidden;
 }
 
-.nav--ul{list-style: none;opacity: 0;transition: all .3s;}
+.nav--ul{list-style: none;transition: all .3s;}
 .nav--li{font-size: 4rem;text-align: center;font-weight: 900;padding: 1rem;}
 .nav--li a{cursor: pointer;text-decoration: none;color: white;}
-.navigation--check:checked ~ .nav > .nav--ul{opacity: 1;}
+.navigation--check:checked ~ .nav{visibility: visible;}
 .header{
     background-image: linear-gradient(to right bottom, rgba(37, 42, 44, .5), rgba(37, 42, 44, .5)), url(../img/img-1.jpg);
     background-image: linear-gradient(to left bottom, rgba(55, 74, 103,.6), rgb(104, 109, 250,.6)), url(../img/img-1.jpg);
