--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ body{
     border-radius: 50%;
     background-color: darkslateblue;
     transform: scale(.5);
-    transition: all .5s;
+    transition: all .8s ease-in-out;
     z-index: 8;
 }
 .navigation--check:checked ~ .nav--background{transform: scale(50);}
@@ -127,22 +127,24 @@ body{
 .navigation--check:checked ~ .navigation__bar span::before{top:0;transform: rotate(135deg)}
 
 .nav{
-    width: 100%;
+    width: 0;
     height: 100vh;
     position: fixed;
     top: 0;
-    left: 0;
+    left: -10%;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 9;
-    visibility: hidden;
+    opacity: 0;
+    transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 .nav--ul{list-style: none;transition: all .3s;}
-.nav--li{font-size: 4rem;text-align: center;font-weight: 900;padding: 1rem;}
+.nav--li{font-size: 4rem;text-align: center;padding: 1rem;}
 .nav--li a{cursor: pointer;text-decoration: none;color: white;}
-.navigation--check:checked ~ .nav{visibility: visible;}
+.navigation--check:checked ~ .nav{opacity: 1;width: 100%;left: 0;}
+
 .header{
     background-image: linear-gradient(to right bottom, rgba(37, 42, 44, .5), rgba(37, 42, 44, .5)), url(../img/img-1.jpg);
     background-image: linear-gradient(to left bottom, rgba(55, 74, 103,.6), rgb(104, 109, 250,.6)), url(../img/img-1.jpg);
