--- a/css/style.css
+++ b/css/style.css
@@ -379,7 +379,7 @@ body{
     transform: translateY(-50%);
     transition: all .3s;
 }
-.courses{padding: .5rem 7rem;}
+.courses{padding: .5rem 0rem .5rem 7rem;}
 .courses__container{max-height: 0; overflow: hidden; transition: all 1s;}
 .careers__container:last-child{border: 0;}
 .careers__container:last-child,
@@ -392,16 +392,16 @@ body{
 .proyectos i{ font-size: 5rem;}
 .badge--image,
 .courses--image{
-    background-color: brown;
-    width: 5rem;
-    height: 5rem;
     border-radius: 50%;
-    /*margin: .5rem 1rem;*/
+    display: flex;
+    align-items: center;
 }
+.badge--image img{width: 5rem;}
+.courses--image img{width: 5rem; }
 .badge--title,
 .proyectos--title,
-.courses--title{font-size: 2.5rem; padding-left: 1rem;}
-
+.courses--title{width: 100%; font-size: 2.5rem; padding-left: 1rem;}
+.courses--title{font-size: 2rem; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;}
 .portfolio{   
     width: 31.3333333333%;
     position: relative;
