--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,5 +1,6 @@
 @media screen and (max-width:1024px){
-    .title{font-size: 4rem;}
+    .wrapper{min-height: 14.8rem;}
+    .title{font-size: 3.8rem;}
     .about,.portfolios{padding: 5rem 0;}
     .portfolio{width: 48%;}
 }
@@ -11,16 +12,16 @@
         clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
     }
-    .wrapper{min-height: 18rem}
+    .wrapper{min-height: 13.2rem;}
     .title__content{margin: 0 1.8rem;}
-    .title{font-size: 5rem;}
+    .title{font-size: 3.4rem;}
     .about,.services,.portfolios,.contacts{padding: 8rem 2rem;}
     .abouts{margin: 0;}
     .portfolio__container{display: block;}
     .certificado__container,.proyectos--container{width: 98%;}
     .certificado__title,.proyecto__title{font-size: 3rem;}
-    .contacts{padding-top: 
-        16rem;
+    .contacts{
+        padding-top: 16rem;
         -webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%);
         clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%);
     }
@@ -32,12 +33,11 @@
 
 @media screen and (max-width: 480px){
     html{font-size: 37.5%;}
-    .title{font-size: 4rem;}
-
+    s.wrapper{min-height: 12.5rem;}
+    .title{font-size: 3rem;}s
 }
 
 @media screen and (max-width: 320px){
-    .wrapper{min-height: 11.5rem;}
     .title{font-size: 2.8rem;}
     .certificado__container,.proyectos--container{margin: 0;width: 100%;}
 }
