--- a/css/style.css
+++ b/css/style.css
@@ -1,75 +1,14 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    outline: 0;
-}
-
-html{font-size: 62.5%;}
-
-body{
-    padding: 3rem;
-    position: relative;
-    z-index: 0;
-}
-
-@font-face{
-    font-family: "Diavlo";
-    src: url("../fonts/Diavlo_BLACK_II_37.otf");
-}
-
-@font-face{
-    font-family: "Lemon Milk";
-    src: url("../fonts/LemonMilk.otf");
-}
-
-@font-face {
-  font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?phzp4b');
-  src:  url('../fonts/icomoon.eot?phzp4b#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?phzp4b') format('truetype'),
-    url('../fonts/icomoon.woff?phzp4b') format('woff'),
-    url('../fonts/icomoon.svg?phzp4b#icomoon') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-  
-[class^="icon-"], [class*=" icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.icon-react:before {content: "\e900";}
-.icon-phone:before {content: "\e942";}
-.icon-location:before {content: "\e947";}
-.icon-mobile2:before {content: "\e959";}
-.icon-spinner5:before {content: "\e97e";}
-.icon-plus:before {content: "\ea0a";}
-.icon-minus:before {content: "\ea0b";}
-.icon-mail4:before {content: "\ea86";}
-.icon-facebook:before {content: "\ea90";}
-.icon-twitter:before {content: "\ea96";}
-.icon-github:before {content: "\eab0";}
-.icon-linkedin2:before {content: "\eaca";}
-.icon-codepen:before {content: "\eae8";}
-
-.margin--outside{
+.margin--outside {
     max-width: 1024px;
     margin: 0 auto;
     height: inherit;
 }
-.navigation--check{display: none;}
-.navigation__bar{
+
+.navigation--check {
+    display: none;
+}
+
+.navigation__bar {
     position: fixed;
     top: 6rem;
     right: 6rem;
@@ -83,7 +22,7 @@ body{
 
 }
 
-.navigation__bar span{
+.navigation__bar span {
     width: 3rem;
     height: .2rem;
     background-color: black;
@@ -95,7 +34,7 @@ body{
 }
 
 .navigation__bar span::after,
-.navigation__bar span::before{
+.navigation__bar span::before {
     content: "";
     width: 3rem;
     height: .2rem;
@@ -105,11 +44,19 @@ body{
     transition: all .3s;
 }
 
-.navigation__bar span::before{top: -.8rem;}
-.navigation__bar span::after{top: .8rem;}
-.navigation__bar:hover span{width: 2rem;}
+.navigation__bar span::before {
+    top: -.8rem;
+}
 
-.nav--background{
+.navigation__bar span::after {
+    top: .8rem;
+}
+
+.navigation__bar:hover span {
+    width: 2rem;
+}
+
+.nav--background {
     position: fixed;
     top: 6rem;
     right: 6rem;
@@ -121,12 +68,26 @@ body{
     transition: all .8s ease-in-out;
     z-index: 8;
 }
-.navigation--check:checked ~ .nav--background{transform: scale(50);}
-.navigation--check:checked ~ .navigation__bar span{background-color: transparent;}
-.navigation--check:checked ~ .navigation__bar span::after{top:0;transform: rotate(-135deg)}
-.navigation--check:checked ~ .navigation__bar span::before{top:0;transform: rotate(135deg)}
 
-.nav{
+.navigation--check:checked~.nav--background {
+    transform: scale(50);
+}
+
+.navigation--check:checked~.navigation__bar span {
+    background-color: transparent;
+}
+
+.navigation--check:checked~.navigation__bar span::after {
+    top: 0;
+    transform: rotate(-135deg)
+}
+
+.navigation--check:checked~.navigation__bar span::before {
+    top: 0;
+    transform: rotate(135deg)
+}
+
+.nav {
     width: 0;
     height: 100vh;
     position: fixed;
@@ -140,14 +101,32 @@ body{
     transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
-.nav--ul{list-style: none;transition: all .3s;}
-.nav--li{font-size: 4rem;text-align: center;padding: 1rem;}
-.nav--li a{cursor: pointer;text-decoration: none;color: white;}
-.navigation--check:checked ~ .nav{opacity: 1;width: 100%;left: 0;}
+.nav--ul {
+    list-style: none;
+    transition: all .3s;
+}
 
-.header{
+.nav--li {
+    font-size: 4rem;
+    text-align: center;
+    padding: 1rem;
+}
+
+.nav--li a {
+    cursor: pointer;
+    text-decoration: none;
+    color: white;
+}
+
+.navigation--check:checked~.nav {
+    opacity: 1;
+    width: 100%;
+    left: 0;
+}
+
+.header {
     background-image: linear-gradient(to right bottom, rgba(37, 42, 44, .5), rgba(37, 42, 44, .5)), url(../img/img-1.jpg);
-    background-image: linear-gradient(to left bottom, rgba(55, 74, 103,.6), rgb(104, 109, 250,.6)), url(../img/img-1.jpg);
+    background-image: linear-gradient(to left bottom, rgba(55, 74, 103, .6), rgb(104, 109, 250, .6)), url(../img/img-1.jpg);
     background-attachment: fixed;
     background-size: cover;
     background-position: center center;
@@ -163,12 +142,12 @@ body{
 
 .about,
 .portfolios,
-.contacts{
+.contacts {
     padding: 6rem 5rem;
     width: 100%;
 }
 
-.services{
+.services {
     background-color: #151515;
     width: 100%;
     padding: 10rem 5rem;
@@ -176,7 +155,7 @@ body{
 
 .about--container,
 .services--container,
-.contacts--container{
+.contacts--container {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -186,20 +165,30 @@ body{
 .abouts,
 .service,
 .portfolio,
-.contact--details{margin: 1%;}
+.contact--details {
+    margin: 1%;
+}
 
-.title__content{margin-left: 6rem;}
-.wrapper{min-height: 15rem;}
-.title{
+.title__content {
+    margin-left: 6rem;
+}
+
+.wrapper {
+    min-height: 15rem;
+}
+
+.title {
     font-family: "Diavlo";
     color: white;
     font-size: 4rem;
     padding: .5rem 0;
 }
 
-.title span{color: #FB9A21;}
+.title span {
+    color: #FB9A21;
+}
 
-.btn{
+.btn {
     font-size: 20px;
     background-color: white;
     border-radius: 20rem;
@@ -213,16 +202,18 @@ body{
     color: black;
 }
 
-.btn i{padding-right: 1.5rem;}
+.btn i {
+    padding-right: 1.5rem;
+}
 
 .about--title,
 .services--title,
 .portfolios--title,
-.contacts--title{
+.contacts--title {
     text-align: center;
     text-transform: uppercase;
     font-family: "Lemon Milk";
-    background-image: linear-gradient(to left, rgba(55, 74, 103,.6), rgb(104, 109, 250,.6));
+    background-image: linear-gradient(to left, rgba(55, 74, 103, .6), rgb(104, 109, 250, .6));
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
@@ -232,19 +223,27 @@ body{
 }
 
 .services--title,
-.contacts--title{color: white;}
-.about{padding: 0 5rem 7rem;}
-.abouts{width: 100%;}
+.contacts--title {
+    color: white;
+}
 
-.abouts h3{
-    padding-left: 2rem; 
+.about {
+    padding: 0 5rem 7rem;
+}
+
+.abouts {
+    width: 100%;
+}
+
+.abouts h3 {
+    padding-left: 2rem;
     position: relative;
     z-index: 0;
     color: black;
     font-size: 3rem;
 }
 
-.abouts h3::after{
+.abouts h3::after {
     content: "";
     position: absolute;
     border-top: 5px solid black;
@@ -256,23 +255,40 @@ body{
     transform: translateY(-50%) rotate(-90deg);
 }
 
-.about--info{margin-bottom: 1rem;}
-.about--text{color: #888888; font-size: 2.5rem;}
-.about--skills{margin-top: 2rem;}
-.about--skills strong{font-size: 2rem; text-transform: uppercase}
-.about--skill{background-color: #E0E2DB; margin-bottom: 2.5rem;}
+.about--info {
+    margin-bottom: 1rem;
+}
 
-.skill--bar{
+.about--text {
+    color: #888888;
+    font-size: 2.5rem;
+}
+
+.about--skills {
+    margin-top: 2rem;
+}
+
+.about--skills strong {
+    font-size: 2rem;
+    text-transform: uppercase
+}
+
+.about--skill {
+    background-color: #E0E2DB;
+    margin-bottom: 2.5rem;
+}
+
+.skill--bar {
     width: 20%;
     background-color: #161919;
-    background-image: linear-gradient(to left, rgba(55, 74, 103,.6), rgb(104, 109, 250,.6));
+    background-image: linear-gradient(to left, rgba(55, 74, 103, .6), rgb(104, 109, 250, .6));
     height: 1.5rem;
     position: relative;
     z-index: 0;
     transition: all 1s;
 }
 
-.info{
+.info {
     background-color: transparent;
     color: black;
     font-weight: 900;
@@ -286,33 +302,37 @@ body{
 }
 
 .info::after,
-.info::before{
+.info::before {
     content: "";
     position: absolute;
     top: 100%;
     left: 50%;
     transform: translateX(-50%);
 }
-.info::after{
+
+.info::after {
     border-top: 5px solid black;
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
 }
-.info::before{
+
+.info::before {
     border-top: 3px solid white;
     border-left: 3px solid transparent;
     border-right: 3px solid transparent;
     z-index: 10;
 }
 
-.services{
-    background-image: linear-gradient(to left bottom, rgba(55, 74, 103,.6), rgb(104, 109, 250,.6));
+.services {
+    background-image: linear-gradient(to left bottom, rgba(55, 74, 103, .6), rgb(104, 109, 250, .6));
     transform: skewY(-7deg);
 }
 
-.services>*{transform: skewY(7deg);}
+.services>* {
+    transform: skewY(7deg);
+}
 
-.service{
+.service {
     width: 31.3333333333%;
     padding: 2.5rem;
     text-align: center;
@@ -321,40 +341,55 @@ body{
     transition: all .3s;
 }
 
-.service:hover{
+.service:hover {
     transform: translateY(-.5rem);
     box-shadow: .2rem .2rem .5rem black;
 }
 
-.service--container{
+.service--container {
     align-self: center;
     font-size: 6rem;
-    background-image: linear-gradient(to left, rgba(55, 74, 103,.6), rgb(104, 109, 250,.6));
+    background-image: linear-gradient(to left, rgba(55, 74, 103, .6), rgb(104, 109, 250, .6));
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
 }
 
-.service--title{color: #888888; font-weight: 900;font-size: 2.5rem;}
-.service--text{color: #888888; padding: 1.5rem 0;font-weight: 500;font-size: 2rem;}
-.portfolio__container{display: flex;}
+.service--title {
+    color: #888888;
+    font-weight: 900;
+    font-size: 2.5rem;
+}
+
+.service--text {
+    color: #888888;
+    padding: 1.5rem 0;
+    font-weight: 500;
+    font-size: 2rem;
+}
+
+.portfolio__container {
+    display: flex;
+}
+
 .certificado__container,
-.proyectos--container{
+.proyectos--container {
     width: 48%;
     margin: 0 1%;
 }
 
 .certificado__title,
-.proyecto__title{
+.proyecto__title {
     padding: 1rem 0;
     font-size: 2.25rem;
 }
+
 .badge,
 .proyectos,
-.courses{
+.courses {
     border: 2px solid rgb(55, 74, 103);
     border-bottom: 0;
-    background-image: linear-gradient(to left, rgba(55, 74, 103,.6), rgb(104, 109, 250,.6));
+    background-image: linear-gradient(to left, rgba(55, 74, 103, .6), rgb(104, 109, 250, .6));
     background-clip: text;
     -webkit-background-clip: text;
     color: #888888;
@@ -366,9 +401,9 @@ body{
     position: relative;
 }
 
-.badge i{
+.badge i {
     font-size: 1.5rem;
-    position: absolute; 
+    position: absolute;
     top: 50%;
     right: 5%;
     color: white;
@@ -379,49 +414,83 @@ body{
     transform: translateY(-50%);
     transition: all .3s;
 }
-.courses{padding: .5rem 0rem .5rem 7rem;}
-.courses__container{max-height: 0; overflow: hidden; transition: all 1s;}
-.careers__container:last-child{border: 0;}
+
+.courses {
+    padding: .5rem 0rem .5rem 7rem;
+}
+
+.courses__container {
+    max-height: 0;
+    overflow: hidden;
+    transition: all 1s;
+}
+
+.careers__container:last-child {
+    border: 0;
+}
+
 .careers__container:last-child,
-.proyectos:last-child{
+.proyectos:last-child {
     border-bottom: 2px;
     border-style: solid;
     border-color: rgb(55, 74, 103);
 }
 
-.proyectos i{ font-size: 5rem;}
+.proyectos i {
+    font-size: 5rem;
+}
+
 .badge--image,
-.courses--image{
+.courses--image {
     border-radius: 50%;
     display: flex;
     align-items: center;
 }
-.badge--image img{width: 5rem;}
-.courses--image img{width: 5rem; }
+
+.badge--image img {
+    width: 5rem;
+}
+
+.courses--image img {
+    width: 5rem;
+}
+
 .badge--title,
 .proyectos--title,
-.courses--title{width: 100%; font-size: 2.5rem; padding-left: 1rem;}
-.courses--title{font-size: 2rem; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;}
-.portfolio{   
+.courses--title {
+    width: 100%;
+    font-size: 2.5rem;
+    padding-left: 1rem;
+}
+
+.courses--title {
+    font-size: 2rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.portfolio {
     width: 31.3333333333%;
     position: relative;
     z-index: 10;
 }
 
-.contacts{
+.contacts {
     -webkit-clip-path: polygon(0 25%, 100% 0, 100% 100%, 0% 100%);
     clip-path: polygon(0 25%, 100% 0, 100% 100%, 0% 100%);
-    background-image: linear-gradient(to left bottom, rgba(55, 74, 103,.6), rgb(104, 109, 250,.6));
+    background-image: linear-gradient(to left bottom, rgba(55, 74, 103, .6), rgb(104, 109, 250, .6));
     background-color: #151515;
     padding-top: 13rem;
 }
-.contact{
+
+.contact {
     display: flex;
     width: 100%;
     justify-content: center;
 }
 
-.contact--details{
+.contact--details {
     display: inherit;
     flex-direction: column;
     padding: 2.5rem;
@@ -431,12 +500,13 @@ body{
     cursor: pointer;
 }
 
-.contact--details:hover{
+.contact--details:hover {
     transform: translateY(-.5rem);
     box-shadow: .2rem .2rem .5rem black;
 }
-.contact--container{
-    background-image: linear-gradient(to left, rgba(55, 74, 103,.6), rgb(104, 109, 250,.6));
+
+.contact--container {
+    background-image: linear-gradient(to left, rgba(55, 74, 103, .6), rgb(104, 109, 250, .6));
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
@@ -446,6 +516,20 @@ body{
     width: 100%;
 }
 
-.contact--description{color: white;text-align: center;}
-.contact--title{color: #888888;font-weight: 900;font-size: 2.5rem;}
-.contact--description p{color: #888888;padding: 1.5rem 0;font-weight: 500;font-size: 2rem;}
+.contact--description {
+    color: white;
+    text-align: center;
+}
+
+.contact--title {
+    color: #888888;
+    font-weight: 900;
+    font-size: 2.5rem;
+}
+
+.contact--description p {
+    color: #888888;
+    padding: 1.5rem 0;
+    font-weight: 500;
+    font-size: 2rem;
+}
