componente de servicios

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,7 @@
   --color-link: #f5977d;
   --color-border: #f5977d;
   --color-hight-title: #f5977d;
+  --color-custom-icon: #f5977d;
   --color-normal-title: #ffffff;
   --color-text: #ffffff;
   --color-icon: #ffffff;
