responsive modules - about/education/experience/portfolio/posts/footer

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
   --bg-dark-hight: #17113d;
   --bg-dark: #241b5e;
   --bg-btn: #f5977d;
+  --bg: #f5977d;
   --color-border-photo: #1c6cc8;
   --color-link: #f5977d;
   --color-border: #f5977d;
